# fraud_scorer

./: .env  .gitignore  DOCUMENT_ORGANIZER_IMPLEMENTATION.md  EXTRACTOR_AI.md  FRAUD_SCORER_v2_RESUMEN.txt  README.md  REPORTE_INVESTIGACION_OCR.md  docker-compose.yml  estructura-v2.txt  estructura-v3.txt  estructura.txt  pyproject.toml  requirements.bak  requirements.txt  start.sh  test_classification.py  test_document_routes.py  test_guided_e2e.py  test_guided_extraction.py  test_optimal_models.py  test_organizer_e2e.py
api/: main.py
data/: cases.db
data/reports/: INF-CASE-2025-0009.html  INF-CASE-2025-0010.html  INF-CASE-2025-0011.html  INF-CASE-2025-0014.html  INF-CASE-2025-0018.html  INF-CASE-2025-0019.html  INF-CASE-2025-0020.html  MODA_YKT_S.A._DE_C.V._20250000002494_INFORME.html  MODA_YKT_S.A._DE_C.V._20250000002494_RESULTADOS.json  MODA_YKT_S.A._DE_C.V._y_o_SIATA_DI_SHMAYA_S.A._DE_C.V._20250000002494_INFORME.html  MODA_YKT_S.A._DE_C.V._y_o_SIATA_DI_SHMAYA_S.A._DE_C.V._20250000002494_RESULTADOS.json  SIN_NOMBRE_SIN_NOMBRE_INFORME.html  SIN_NOMBRE_SIN_NOMBRE_RESULTADOS.json  informe_20250000002494 - MODA YKT, S.A. DE C.V.html  replay_CASE-2025-0014_20250824_223409.json  replay_CASE-2025-0014_20250824_230830.json  resultados_20250000002494 - MODA YKT, S.A. DE C.V.json  resultados_CASE-2025-0009.json  resultados_CASE-2025-0010.json  resultados_CASE-2025-0011.json  resultados_CASE-2025-0014.json  resultados_MODA_YKT_S.A._DE_C.V._20250000002494.json  (+1 more)
progress/: reporte_avance.md
scripts/: clean_duplicates_simple.py  debug_extraction.py  init.sql  process_with_intelligent_extraction.py  rebuild_cache_index.py  replay_case.py  run_report.py  setup_macos.sh  start_web_server.py  test_intelligent_extractor.py  test_system.py
templates/: report_template.html
(+296 files in other folders)
