[project]
name = "fraud_scorer"
version = "0.1.0"
description = "Sistema de análisis de siniestros y scoring de fraude"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "black", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraud_scorer*"]
